[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scenes/notes/Editor Note Click Area.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 80 )

[sub_resource type="QuadMesh" id=2]
size = Vector2( 160, 160 )

[node name="Editor Note Click Area" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
visible = false
mesh = SubResource( 2 )

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
